docs/book/samples/appa/divzero.out
error[endpoint]: unhandled err reached main: "division by zero"
  born in main at divzero.kso:2
