docs/book/samples/appa/divzero.kso
main =
  n = 10 / 0
  print "{n}"
